--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-map-gl": "^5.2.11",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "reactjs-dropdown-component": "^1.1.6",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
